--- a/index.html
+++ b/index.html
@@ -1,21 +1,85 @@
 <!DOCTYPE html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<title>Howdy FED2324</title>
-	
+
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@700;800&display=swap" rel="stylesheet">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@600;700;800&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;600;700;800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
+	<!-- Foto en tekst -->
 
-	<script defer src="scripts/script.js"></script>
+	<header>
+		<img src="../Blok2/images/blauwelogodopper.png" alt="Dopper Logo" class="logo">
+		<div class="logo menu-icon">
+			<div class="bar"></div>
+		</div>
+
+	</header>
+
+	<section class="banner">
+		<img src="../Blok2/images/bannerfoto.png" alt="Bannerfotometcadeau">
+		<div class="banner-content">
+			<h1>Houd het simpel deze feestdagen</h1>
+			<h2>Geef een Dopper cadeau. Just refill.</h2>
+			<button>Bestel nu</button>
+		</div>
+	</section>
+
+	<!-- tekst flessen -->
+
+	<section class="statistics">
+		<article>
+			<h3>40</h3>
+			<p>flessen</p>
+			<p>Volgens onderzoek voorkomt één Dopper-fles dat 40 plastic wegwerpflessen per jaar in onze oceanen
+				belanden.</p>
+		</article>
+
+		<article>
+			<h3>85</h3>
+			<p>flessen</p>
+			<p>Sinds 2009 hebben we voorkomen dat 85 miljoen kilo plastic afval in onze watersystemen terechtkomt.</p>
+		</article>
+
+		<article>
+			<h3>93</h3>
+			<p>flessen</p>
+			<p>We hebben meer dan 93.000 Nepalezen in afgelegen gebieden van schoon drinkwater voorzien.</p>
+		</article>
+	</section>
+
+	<!-- tappen foto met tekst -->
+
+
+	<div class="flex-container">
+		<div class="text-container">
+			<img src="../Blok2/images/watertabfoto.jpg" alt="watertapfoto" class="tappen-foto">
+			<h4>Samen maken we van tappen de nieuwe norm</h4>
+			<p>Het vullen van jouw herbruikbare waterfles is ineens een stuk makkelijker én een stuk leuker. Maak kennis
+				met de Dopper Water Tap, een innovatief apparaat ontworpen om jouw manier van drinken - en tappen - te
+				veranderen. En dat allemaal terwijl-ie jouw impact inzichtelijk maakt en mijlpalen viert.</p>
+			<button>Download de brochure</button>
+		</div>
+		<script defer src="scripts/script.js"></script>
 </body>
-	
+
 </html>
