--- a/Blok2/index.html
+++ b/Blok2/index.html
@@ -9,6 +9,7 @@
 	<title>Dopper</title>
 
 	<link href="styles/style.css" rel="stylesheet">
+    <link rel="README.md" href="">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
