--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Howdy FED2324</title>
+	<title>Dopper</title>
 
 	<link href="styles/style.css" rel="stylesheet">
+	<link rel="README.md" href="">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@700;800&display=swap" rel="stylesheet">
-
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@600;700;800&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -25,61 +19,94 @@
 </head>
 
 <body>
-	<!-- Foto en tekst -->
+	<input type="checkbox" id="hamburger">
+	<label for="hamburger" class="hamburger-label">
+		<img src="./images/hamburgermenu.png" alt="Hamburger Icon">
+	</label>
+
+	<nav class="hamnav">
+		<ul>
+			<li>Home</li>
+			<li><a href="producten.html">Producten</a></li>
+			<li>Missie</li>
+			<li>Sluit je aan</li>
+		</ul>
+	</nav>
 
 	<header>
-		<img src="../Blok2/images/blauwelogodopper.png" alt="Dopper Logo" class="logo">
-		<div class="logo menu-icon">
-			<div class="bar"></div>
-		</div>
-
+		<h1 class="logo-text">Dopper website</h1>
+		<img src="./images/blauwelogodopper.png" alt="Dopper Logo" class="logo">
+		<span class="logo menu-icon">
+			<span class="bar"></span>
+		</span>
 	</header>
 
-	<section class="banner">
-		<img src="../Blok2/images/bannerfoto.png" alt="Bannerfotometcadeau">
-		<div class="banner-content">
-			<h1>Houd het simpel deze feestdagen</h1>
-			<h2>Geef een Dopper cadeau. Just refill.</h2>
-			<button>Bestel nu</button>
-		</div>
-	</section>
+	<main>
+		<!-- Foto en tekst -->
 
-	<!-- tekst flessen -->
+		<section class="banner">
+			<img src="./images/bannerfoto.png" alt="Bannerfotometcadeau" class="banner-img">
+			<article class="banner-content">
+				<h2>Houd het simpel deze feestdagen</h2>
+				<p>Geef een Dopper cadeau. Just refill.</p>
+				<a aria-label="klik hier om een dopper te bestellen" href="jouw_doel_pagina.html" class="button1">Bestel
+					nu</a>
+			</article>
+		</section>
 
-	<section class="statistics">
-		<article>
-			<h3>40</h3>
-			<p>flessen</p>
-			<p>Volgens onderzoek voorkomt één Dopper-fles dat 40 plastic wegwerpflessen per jaar in onze oceanen
-				belanden.</p>
-		</article>
+		<!-- tekst flessen -->
 
-		<article>
-			<h3>85</h3>
-			<p>flessen</p>
-			<p>Sinds 2009 hebben we voorkomen dat 85 miljoen kilo plastic afval in onze watersystemen terechtkomt.</p>
-		</article>
+		<section class="statistics" aria-label="feitjes over dopper flessen">
+			<article>
+				<h2 aria-label="40 flessen">40 </h2>
+				<p>flessen</p>
+				<p>Volgens onderzoek voorkomt één Dopper-fles dat 40 plastic wegwerpflessen per jaar in onze oceanen
+					belanden.</p>
+			</article>
 
-		<article>
-			<h3>93</h3>
-			<p>flessen</p>
-			<p>We hebben meer dan 93.000 Nepalezen in afgelegen gebieden van schoon drinkwater voorzien.</p>
-		</article>
-	</section>
+			<article>
+				<h2 aria-label="85 flessen">85</h2>
+				<p>flessen</p>
+				<p>Sinds 2009 hebben we voorkomen dat 85 miljoen kilo plastic afval in onze watersystemen
+					terechtkomt.
+				</p>
+			</article>
 
-	<!-- tappen foto met tekst -->
+			<article>
+				<h2 aria-label="93 flessen">93</h2>
+				<p>flessen</p>
+				<p>We hebben meer dan 93.000 Nepalezen in afgelegen gebieden van schoon drinkwater voorzien.</p>
+			</article>
+		</section>
 
+		<!-- tappen foto met tekst -->
 
-	<div class="flex-container">
-		<div class="text-container">
-			<img src="../Blok2/images/watertabfoto.jpg" alt="watertapfoto" class="tappen-foto">
-			<h4>Samen maken we van tappen de nieuwe norm</h4>
+		<article class="flex-container text-container">
+			<img src="./images/watertabfoto.jpg" alt="watertapfoto" class="tappen-foto">
+			<h2>Samen maken we van tappen de nieuwe norm</h2>
 			<p>Het vullen van jouw herbruikbare waterfles is ineens een stuk makkelijker én een stuk leuker. Maak kennis
 				met de Dopper Water Tap, een innovatief apparaat ontworpen om jouw manier van drinken - en tappen - te
 				veranderen. En dat allemaal terwijl-ie jouw impact inzichtelijk maakt en mijlpalen viert.</p>
-			<button>Download de brochure</button>
-		</div>
-		<script defer src="scripts/script.js"></script>
+			<a href="brochure" class="button2">Download de brochure</a>
+			<a aria-label="lees meer over de dopper watertab" href="brochure" class="button3">Lees meer</a>
+		</article>
+
+
+		<!-- Nieuwe sectie -->
+		<section class="new-section text-container">
+			<img src="./images/manmetdopper1.jpg" alt="man met dopper" id="dopperflesfoto">
+			<p>Verras je collega's of relaties</p>
+			<h2>Geef persoonlijke branded Doppers</h2>
+			<p>Je verspreidt de boodschap dat jouw merk opstaat tegen plasticvervuiling, en moedigt anderen aan
+				hetzelfde te doen. Gebruik onze bestel-tool, personaliseer vanaf 60 Dopper-flessen voor je team,
+				klanten of relaties en bestel in drie simpele stappen.</p>
+			<p>Minder dan 60 Dopper-flessen nodig? Bestel ze hier.</p>
+			<a aria-label="klik hier om je dopperfles te customizen" href="jouw_customizer_tool" class="button3">Ga naar
+				de customizer-tool</a>
+		</section>
+
+	</main>
+	<script defer src="scripts/script.js"></script>
 </body>
 
 </html>
